charts/region/sno-core-install/templates/registration-service/registration-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registration-service
  name: registration-service
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: registration-service
    deploymentconfig: registration-service
  sessionAffinity: None
  type: ClusterIP
