charts/region/sno-core-install/templates/registration-service/registration-service-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: registration-service
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: registration-service
    weight: 100
  wildcardPolicy: None
